--- a/src/index.css
+++ b/src/index.css
@@ -162,3 +162,18 @@ textarea {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+/* experience */
+.about-image {
+  @apply absolute left-1/2 top-0 z-20 h-[60vh] w-96 origin-center -translate-x-1/2 overflow-hidden rounded-3xl md:w-[30vw];
+}
+@layer utilities {
+  .h-160p {
+    height: 160%;
+  }
+  @media (min-width: 768px) {
+    .md\:h-200p {
+      height: 200%;
+    }
+  }
+}
